--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.awt.artrium_core": "Atrium Core",
   "item.awt.energized_artrium": "Energised Atrium",
   "item.awt.roundel_mold": "Roundel Mold",
+  "item.awt.vortex_manipulator": "Vortex Manipulator",
 
 
 
