--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -148,6 +148,7 @@
   "desktop.awt.timelordfairytale": "Timelord Fairytale",
   "desktop.awt.monochromeinterior": "Monochrome",
   "desktop.awt.awakenedinterior": "Awakened",
+  "desktop.awt.stainedwoodinterior": "Stainedwood",
   
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
