Name Fixes, new Splash Texts, new WIP Disc

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -133,7 +133,8 @@
   "desktop.awt.second_alt": "Second Alt",
   "desktop.awt.third": "Third",
   "desktop.awt.third_alt": "Third Alt",
-  "desktop.awt.letts": "Barry Letts' Three Doctors",
+  "desktop.awt.letts": "Three Doctors",
+  "desktop.awt.hearth": "Hearth",
   "desktop.awt.liberty": "Liberty",
   "desktop.awt.dmutoyota": "DO7's DMU Toyota",
   "desktop.awt.dmumissy": "DO7's DMU Missy",
