60th music disc wip someone else fix it only thing that doesnt work is the texture </3

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -10,6 +10,7 @@
   "item.awt.vortex_manipulator": "Vortex Manipulator",
   "item.awt.drwhovale_music_disc": "Regenerating Music Disc",
   "item.awt.drwhovale_music_disc.desc": "Murray Gold - Vale Decem",
+  "item.awt.doctor_who_60th.desc": "60th Anniversary",
 
 
 
