Texts and Splash

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -10,7 +10,8 @@
   "item.awt.vortex_manipulator": "Vortex Manipulator",
   "item.awt.drwhovale_music_disc": "Regenerating Music Disc",
   "item.awt.drwhovale_music_disc.desc": "Murray Gold - Vale Decem",
-  "item.awt.doctor_who_60th.desc": "60th Anniversary",
+  "item.awt.doctorwhoxv_music_disc": "Binary Music Disc",
+  "item.awt.doctorwhoxv_music_disc.desc": "Murray Gold - Doctor Who XV",
 
 
 
