Added aNOTHER new Disc - we don't profit from this so I fucking can.

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -12,8 +12,8 @@
   "item.awt.drwhovale_music_disc.desc": "Murray Gold - Vale Decem",
   "item.awt.doctorwhoxv_music_disc": "Binary Music Disc",
   "item.awt.doctorwhoxv_music_disc.desc": "Murray Gold - Doctor Who XV",
-
-
+  "item.awt.paralyzer_music_disc": "2000s Nostalgic Music Disc",
+  "item.awt.paralyzer_music_disc.desc": "Finger Eleven - Paralyzer (Alternate Mix)",
 
   "item_group.Artrium":"AWT",
 
