--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -8,6 +8,7 @@
   "item.awt.energized_artrium": "Energised Atrium",
   "item.awt.roundel_mold": "Roundel Mold",
   "item.awt.vortex_manipulator": "Vortex Manipulator",
+  "item.awt.vortex_manipulator2": "Vortex Manipulator",
   "item.awt.drwhovale_music_disc": "Regenerating Music Disc",
   "item.awt.drwhovale_music_disc.desc": "Murray Gold - Vale Decem",
   "item.awt.doctorwhoxv_music_disc": "Binary Music Disc",
