lower cased shit coz hmmm ur supposed to in certain places pr someothing

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -15,8 +15,8 @@
   "item.awt.doctorwhoxv_music_disc.desc": "Murray Gold - Doctor Who XV",
   "item.awt.paralyzer_music_disc": "2000s Nostalgic Music Disc",
   "item.awt.paralyzer_music_disc.desc": "Finger Eleven - Paralyzer (Alternate Mix)",
-  "item.awt.Dugga_doo_music_disc": "Dugga doo music Disc",
-  "item.awt.Dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
+  "item.awt.dugga_doo_music_disc": "Dugga doo music Disc",
+  "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
   "item_group.Artrium":"AWT",
 
   "exterior.awt.awtboxes": "AWT Boxes",
