--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -1,11 +1,11 @@
 {
   "text.config.aitconfig.title": "Adventures With TARDISes",
 
-  "item.awt.artrium":"Atrium",
+  "item.awt.atrium":"Atrium",
   "item.awt.lightsaber":"Lightsaber",
   "item.awt.processing_unit": "Processing Unit",
-  "item.awt.artrium_core": "Atrium Core",
-  "item.awt.energized_artrium": "Energised Atrium",
+  "item.awt.atrium_core": "Atrium Core",
+  "item.awt.energized_atrium": "Energised Atrium",
   "item.awt.roundel_mold": "Roundel Mold",
   "item.awt.vortex_manipulator": "Vortex Manipulator",
   "item.awt.vortex_manipulator2": "Vortex Manipulator",
@@ -17,7 +17,7 @@
   "item.awt.paralyzer_music_disc.desc": "Finger Eleven - Paralyzer (Alternate Mix)",
   "item.awt.dugga_doo_music_disc": "Dugga doo music Disc",
   "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
-  "item_group.Artrium":"AWT",
+  "item_group.Atrium":"AWT",
 
   "exterior.awt.awtboxes": "AWT Boxes",
   "exterior.awt.onion": "The Onion",
@@ -211,9 +211,9 @@
   "console.awt.toyota_rhamnous": "Rhamnous' Toyota",
   "console.awt.crystalalt": "TardisOwners' Crystalline",
 
-  "block.awt.artrium_block": "Atrium Block",
-  "block.awt.artrium_ore": "Atrium Ore",
-  "block.awt.deepslate_artrium_ore": "Deepslate Atrium Ore",
+  "block.awt.atrium_block": "Atrium Block",
+  "block.awt.atrium_ore": "Atrium Ore",
+  "block.awt.deepslate_atrium_ore": "Deepslate Atrium Ore",
 
   "item_group.awt.Roundel": "Roundels"
 
