Fucking hot tub

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -24,6 +24,7 @@
   "exterior.awt.vast": "Vast Boxes",
   "exterior.awt.lefts": "Left's Boxes",
   "exterior.awt.blocktardis": "Block TARDISes",
+  "exterior.awt.hottub": "Hot Tubs",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
@@ -53,6 +54,7 @@
   "exterior.awt.logo_tardis_default": "Lego PoliceBox",
   "exterior.awt.logo_tardis_purple": "Lego PoliceBoxV2",
   "exterior.awt.logo_tardis_darkblue": "Lego PoliceBoxV3",
+  "exterior.awt.hottubtimemachine": "Hot Tub Time Machine",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
