orbital Interior by sansiscool

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -158,6 +158,7 @@
   "desktop.awt.monochromeinterior": "Monochrome",
   "desktop.awt.awakenedinterior": "Awakened",
   "desktop.awt.stainedwoodinterior": "Stainedwood",
+  "desktop.awt.orbitalinterior": "Orbital",
   
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
