Tomb Raider by nathan n tree

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -160,6 +160,7 @@
   "desktop.awt.awakenedinterior": "Awakened",
   "desktop.awt.stainedwoodinterior": "Stainedwood",
   "desktop.awt.orbitalinterior": "Orbital",
+  "desktop.awt.tomb_raider": "Tomb Raider",
   
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
