fixed nathans shitty ass spelling

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -159,8 +159,8 @@
   "desktop.awt.awakenedinterior": "Awakened",
   "desktop.awt.stainedwoodinterior": "Stainedwood",
   "desktop.awt.orbitalinterior": "Orbital",
-  "desktop.awt.dinerr": "Diner",
-  "desktop.awt.angelicc": "Angelic",
+  "desktop.awt.diner": "Diner",
+  "desktop.awt.angelic": "Angelic",
   "desktop.awt.tomb_raider": "Tomb Raider",
 
   "animation.awt.paradox_mat": "Paradox Mat",
