Fixed harmony exterior

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -86,6 +86,7 @@
   "exterior.awt.bee_k6": "Bee Booth",
   "exterior.awt.crimson": "Crimson",
   "exterior.awt.zen": "Zen",
+  "exterior.awt.harmonybox": "Harmony",
 
   "sonic.awt.blunt": "Blunt",
   "sonic.awt.tardis": "Tardis",
