Fixed harmony interior

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -163,6 +163,7 @@
   "desktop.awt.diner": "Diner",
   "desktop.awt.angelic": "Angelic",
   "desktop.awt.tomb_raider": "Tomb Raider",
+  "desktop.awt.harmony": "Harmony",
 
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
