lego dim en lang as it appears to not exist and not in the new update but fuck em

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -55,6 +55,7 @@
   "exterior.awt.logo_tardis_purple": "Lego PoliceBoxV2",
   "exterior.awt.logo_tardis_darkblue": "Lego PoliceBoxV3",
   "exterior.awt.hottubtimemachine": "Hot Tub Time Machine",
+  "exterior.awt.lego_dimensions_police_box": "Lego Dim",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
