--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -169,6 +169,7 @@
   "desktop.awt.angelic": "Angelic",
   "desktop.awt.tomb_raider": "Tomb Raider",
   "desktop.awt.harmony": "Harmony",
+  "desktop.awt.travelers_respite": "Travelers Respite",
 
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
