--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -170,6 +170,7 @@
   "desktop.awt.tomb_raider": "Tomb Raider",
   "desktop.awt.harmony": "Harmony",
   "desktop.awt.travelers_respite": "Travelers Respite",
+  "desktop.awt.70default": "Type 70",
 
   "animation.awt.paradox_mat": "Paradox Mat",
   "animation.awt.goofy_fall_demat": "Oops I Died",
