--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -225,6 +225,10 @@
 
   "console.awt.toyota_rhamnous": "Rhamnous' Toyota",
   "console.awt.crystalalt": "TardisOwners' Crystalline",
+  "console.awt.block": "Vanilla Console",
+  "console.awt.test": "Testy Console :3",
+  "console.awt.dice": "Toyota Alt",
+  "console.awt.junkglass": "Junkglass",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
