tweaked and sorted out some of the en lang + tardis categories

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -22,13 +22,14 @@
   "item.awt.tardis_detector": "TARDIS Detector",
   "item.awt.tardis_detector.desc": "Cheap one use Stat remote which may not always work",
 
-  "exterior.awt.awtboxes": "AWT Boxes",
+  "exterior.awt.classicboxes": "Classic Boxes",
   "exterior.awt.onion": "The Onion",
   "exterior.awt.vast": "Vast Boxes",
-  "exterior.awt.lefts": "Left's Boxes",
+  "exterior.awt.modernboxes": "Modern Boxes",
   "exterior.awt.blocktardis": "Vanilla-Styled",
   "exterior.awt.hottub": "Hot Tubs",
   "exterior.awt.legoboxes": "Lego-Styled",
+  "exterior.awt.capsules": "TT Capsules",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
@@ -43,8 +44,6 @@
   "exterior.awt.lightblueonion": "Ice",
   "exterior.awt.limegreenonion": "Glow",
   "exterior.awt.multionion": "Multi",
-  "exterior.awt.cube": "The Cube",
-  "exterior.awt.atrium": "Atrium Block",
   "exterior.awt.policebox": "Smith",
   "exterior.awt.vastdefault": "Default",
   "exterior.awt.vastcoral": "Coral",
