--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -222,6 +222,7 @@
   "console.awt.test": "Testy Console :3",
   "console.awt.dice": "Toyota Alt",
   "console.awt.junkglass": "Junkglass",
+  "console.awt.block2": "Vanilla Console Alt",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
