--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -225,6 +225,8 @@
   "console.awt.block2": "Burnt Vanilla Console",
   "console.awt.block3": "Marine Vanilla Console",
   "console.awt.block4": "Pink Vanilla Console",
+  "console.awt.toyota_alt": "Toyota Alt",
+  "console.awt.toyota_alt2": "Toyota Alt2",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
