--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -227,6 +227,7 @@
   "console.awt.block4": "Pink Vanilla Console",
   "console.awt.toyota_alt": "Toyota Alt",
   "console.awt.toyota_alt2": "Toyota Alt2",
+  "console.awt.8_alt": "Hudolin Alt",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
