--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -228,6 +228,7 @@
   "console.awt.toyota_alt": "Toyota Alt",
   "console.awt.toyota_alt2": "Toyota Alt2",
   "console.awt.8_alt": "Hudolin Alt",
+  "console.awt.toyota_rhamnous_alt": "Rhamnous' Toyota Alt",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
