TardisOwner purple windows for lefts box

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -57,6 +57,7 @@
   "exterior.awt.hottubtimemachine": "Hot Tub Time Machine",
   "exterior.awt.lego_dimensions_police_box": "Lego Dim",
   "exterior.awt.policebox_alt": "Toyota",
+  "exterior.awt.policebox_purple": "Toyota Purple",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
