--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -27,6 +27,7 @@
   "exterior.awt.hottub": "Hot Tubs",
   "exterior.awt.legoboxes": "Lego-Styled",
   "exterior.awt.capsules": "TT Capsules",
+  "exterior.awt.awt-exclusive": "AWT Exclusive",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
