--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -18,6 +18,7 @@
   "item.awt.dugga_doo_music_disc": "§cMusic Disc",
   "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
   "item_group.Atrium":"AWT",
+  "item.awt.sonic_glasses": "Sonic Shades",
 
   "exterior.awt.classicboxes": "Classic Boxes",
   "exterior.awt.onion": "The Onion",
