removed TARDIM - gamblebox, nathan. remove classic porple. remove 2d, gamblebox toywardian box,2d box

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -62,8 +62,7 @@
   "exterior.awt.policebox_purple": "Toyota Purple",
 
   "exterior.awt.billcipher": "Bill Cipher",
-  "exterior.awt.toywardianbooth": "GambleBox Booth",
-  "exterior.awt.toywardianbox": "Toywardian Box",
+  "exterior.awt.toywardianbooth": "GambleBox Booth", ,
   "exterior.awt.toywardianfaded": "GambleBox",
   "exterior.awt.inverted_police": "Inverted",
   "exterior.awt.mayhembox": "Eos Box",
@@ -71,8 +70,6 @@
   "exterior.awt.do7": "DO7 Box",
   "exterior.awt.burntcapsule": "Burnt Capsule",
   "exterior.awt.toyardian": "73 GambleBox",
-  "exterior.awt.classic_purple": "Classic Cartoon Porple",
-  "exterior.awt.log": "Oak Log",
   "exterior.awt.k6booth": "K6",
   "exterior.awt.futurek6": "Future K6",
   "exterior.awt.texture": "Textured...?",
@@ -81,10 +78,6 @@
   "exterior.awt.nathanbox": "Nathan Box",
   "exterior.awt.glasgow": "Glasgow",
   "exterior.awt.tardimog": "OG TARDIM",
-  "exterior.awt.tardim_gamblebox": "TARDIM GambleBox",
-  "exterior.awt.tardim_nathan": "TARDIM Nathan",
-  "exterior.awt.2dbox": "2D Box",
-  "exterior.awt.2dgamblebox": "2D GambleBox",
   "exterior.awt.atrium_box": "Atrium Box",
   "exterior.awt.memorybox": "Memory Box",
   "exterior.awt.memorybox_classic": "Classic Memory Box",
