made an oopsie so fixed

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -62,7 +62,7 @@
   "exterior.awt.policebox_purple": "Toyota Purple",
 
   "exterior.awt.billcipher": "Bill Cipher",
-  "exterior.awt.toywardianbooth": "GambleBox Booth", ,
+  "exterior.awt.toywardianbooth": "GambleBox Booth",
   "exterior.awt.toywardianfaded": "GambleBox",
   "exterior.awt.inverted_police": "Inverted",
   "exterior.awt.mayhembox": "Eos Box",
