ait sucks due to their fuckass stuff which butt fucks mc datagen

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -2,6 +2,8 @@
   "text.config.aitconfig.title": "Adventures With TARDISes",
 
   "entity.awt.k9": "K-9",
+  "dimension.awt.skarodim": "Skaro",
+  "dimension.awt.thelostworld": "The Lost Reality",
 
   "item.awt.atrium":"Atrium",
   "item.awt.lightsaber":"Lightsaber",
