--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -65,6 +65,7 @@
   "exterior.awt.lego_dimensions_police_box": "Lego Dim",
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "Toyota Purple",
+  "exterior.awt.lefthottub": "Left's HotTub",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
