--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -66,6 +66,7 @@
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "Toyota Purple",
   "exterior.awt.lefthottub": "Left's HotTub",
+  "exterior.awt.jake": "AiT Jake",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
