--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -92,6 +92,7 @@
   "exterior.awt.crimson": "Crimson",
   "exterior.awt.zen": "Zen",
   "exterior.awt.harmonybox": "Rhamnous",
+  "exterior.awt.creamk6booth": "Gloom Booth",
 
   "sonic.awt.blunt": "Blunt",
   "sonic.awt.tardis": "Tardis",
