--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -66,6 +66,9 @@
   "exterior.awt.policebox_purple": "Toyota Purple",
   "exterior.awt.lefthottub": "Left's HotTub",
   "exterior.awt.jake": "AiT Jake",
+  "exterior.awt.policebox_coral": "Coral",
+  "exterior.awt.policebox_badwolf": "Badwolf",
+  "exterior.awt.gamblebox": "Gamblebox",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
