--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -58,11 +58,10 @@
   "exterior.awt.logo_tardis_default": "Lego PoliceBox",
   "exterior.awt.logo_tardis_purple": "Lego PoliceBoxV2",
   "exterior.awt.logo_tardis_darkblue": "Lego PoliceBoxV3",
-  "exterior.awt.hottubtimemachine": "Hot Tub Time Machine",
   "exterior.awt.lego_dimensions_police_box": "Lego Dim",
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "Toyota Purple",
-  "exterior.awt.lefthottub": "Left's HotTub",
+  "exterior.awt.lefthottub": "Hot Tub Time Machine",
   "exterior.awt.jake": "AiT Jake",
   "exterior.awt.policebox_coral": "Coral",
   "exterior.awt.policebox_badwolf": "Badwolf",
