left box update

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -66,6 +66,7 @@
   "exterior.awt.policebox_coral": "Coral",
   "exterior.awt.policebox_badwolf": "Badwolf",
   "exterior.awt.gamblebox": "Gamblebox",
+  "exterior.awt.policebox_tokomak": "Tokomak",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
