left box update

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -67,6 +67,7 @@
   "exterior.awt.policebox_badwolf": "Badwolf",
   "exterior.awt.gamblebox": "Gamblebox",
   "exterior.awt.policebox_tokomak": "Tokomak",
+  "exterior.awt.policebox_alt2": "Toyota Alt",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
