--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -68,6 +68,7 @@
   "exterior.awt.gamblebox": "Gamblebox",
   "exterior.awt.policebox_tokomak": "Tokomak",
   "exterior.awt.policebox_alt2": "Toyota Alt",
+  "exterior.awt.policebox_rhamnous": "Rhamnous",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
