nathan ver of lefts box

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -69,6 +69,7 @@
   "exterior.awt.policebox_tokomak": "Tokomak",
   "exterior.awt.policebox_alt2": "Toyota Alt",
   "exterior.awt.policebox_rhamnous": "Rhamnous",
+  "exterior.awt.policebox_nathan": "NathanBox",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
