--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -33,6 +33,7 @@
   "exterior.awt.legoboxes": "Lego-Styled",
   "exterior.awt.capsules": "TT Capsules",
   "exterior.awt.awt-exclusive": "AWT Exclusive",
+  "exterior.awt.beehive": "Beehive",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
