--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -34,6 +34,7 @@
   "exterior.awt.capsules": "TT Capsules",
   "exterior.awt.awt-exclusive": "AWT Exclusive",
   "exterior.awt.beehive": "Beehive",
+  "exterior.awt.nezukobox": "Nezuko Boxes",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
