--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -23,6 +23,7 @@
   "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
   "item_group.Atrium":"AWT",
   "item.awt.sonic_glasses": "Sonic Shades",
+  "item.awt.k9_spawn_egg": "k9 spawn egg",
 
   "exterior.awt.classicboxes": "Classic Boxes",
   "exterior.awt.onion": "The Onion",
