added weapon matrix updated sonic glasses texture

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -21,6 +21,7 @@
   "item.awt.paralyzer_music_disc.desc": "Finger Eleven - Paralyzer (Alternate Mix)",
   "item.awt.dugga_doo_music_disc": "§cMusic Disc",
   "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
+  "item.awt.weapon_matrix": "weapon matrix",
 
   "item_group.Atrium":"AWT",
   "item.awt.sonic_glasses": "Sonic Shades",
