--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -21,13 +21,13 @@
   "item.awt.paralyzer_music_disc.desc": "Finger Eleven - Paralyzer (Alternate Mix)",
   "item.awt.dugga_doo_music_disc": "§cMusic Disc",
   "item.awt.dugga_doo_music_disc.desc": "Dugga doo - Dugga doo",
-  "item.awt.weapon_matrix": "weapon matrix",
+  "item.awt.weapon_matrix": "Weapon Matrix",
 
   "item_group.Atrium":"AWT",
   "item.awt.sonic_glasses": "Sonic Shades",
-  "item.awt.k9_spawn_egg": "k9 spawn egg",
-  "item.awt.spoon": "spoon",
-  "item.awt.spoon.desc": "I am the doctor and this is my spoon",
+  "item.awt.k9_spawn_egg": "K-9 Spawn Egg",
+  "item.awt.spoon": "Spoon",
+  "item.awt.spoon.desc": "I am The Doctor and this is my spoon",
 
   "effect.awt.Antiradiation":"Anti-Radiation",
 
