wip sonic scouter - dino can u check as its supposed to be an alt sonic shade but when on the face slot it doesnt appear

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -25,6 +25,7 @@
 
   "item_group.Atrium":"AWT",
   "item.awt.sonic_glasses": "Sonic Shades",
+  "item.awt.dbz_scouter": "Sonic Scouter",
   "item.awt.k9_spawn_egg": "K-9 Spawn Egg",
   "item.awt.spoon": "Spoon",
   "item.awt.spoon.desc": "I am The Doctor and this is my spoon",
