--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -136,6 +136,7 @@
   "sonic.awt.kenobi_sonic": "Sonic Kenobi Lightsaber",
   "sonic.awt.elegant_sonic": "Sonic Dooku Lightsaber",
   "sonic.awt.laser_screwdriver": "Laser Screwdriver",
+  "sonic.awt.dbz_sonic": "Dragon Ball Radar",
 
   "desktop.awt.hell": "Hell",
   "desktop.awt.fnaf4": "FNAF 4",
