--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -79,6 +79,7 @@
   "exterior.awt.policebox_rhamnous": "Rhamnous",
   "exterior.awt.policebox_nathan": "NathanBox",
   "exterior.awt.policebox_dino": "Dino",
+  "exterior.awt.policebox_flatline": "Flatline",
 
   "exterior.awt.billcipher": "Bill Cipher",
   "exterior.awt.toywardianbooth": "GambleBox Booth",
