rhamnous vanilla box

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -62,6 +62,7 @@
   "exterior.awt.blocktis": "OG Blocktis",
   "exterior.awt.blocktisv2": "Blocktis V2",
   "exterior.awt.blocktisv3": "Blocktis V3",
+  "exterior.awt.rhamnous_vanilla": "Rhamnous",
   "exterior.awt.logo_tardis_default": "Lego PoliceBox",
   "exterior.awt.logo_tardis_purple": "Lego PoliceBoxV2",
   "exterior.awt.logo_tardis_darkblue": "Lego PoliceBoxV3",
