--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -63,6 +63,7 @@
   "exterior.awt.blocktisv2": "Blocktis V2",
   "exterior.awt.blocktisv3": "Blocktis V3",
   "exterior.awt.rhamnous_vanilla": "Rhamnous",
+  "exterior.awt.glasglow_vanilla": "Glasglow",
   "exterior.awt.logo_tardis_default": "Lego PoliceBox",
   "exterior.awt.logo_tardis_purple": "Lego PoliceBoxV2",
   "exterior.awt.logo_tardis_darkblue": "Lego PoliceBoxV3",
