--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -230,6 +230,7 @@
   "block.awt.blue_concrete_roundel": "Blue Concrete Roundel",
   "block.awt.exposed_copper_roundel": "Exposed Copper Roundel",
   "block.awt.copper_roundel": "Copper Roundel",
+  "block.awt.bluequartz_roundel": "Blue-Quartz Roundel",
 
   "console.awt.toyota_rhamnous": "Rhamnous' Toyota",
   "console.awt.crystalalt": "TardisOwners' Crystalline",
