you lot get ur fat asses back on working here

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -267,6 +267,6 @@
   "block.awt.rusty_thick_grate_block": "Rusty Thick Grate",
 
   "item_group.awt.Roundel": "AWT: Roundels",
-  "item_group.Atrium": "Adventures With TARDISes",
+  "item_group.Atrium": "AWT: Main",
   "item_group.awt.Decor": "AWT: Decor"
 }
