hartnell toyota console for classic neon

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -260,6 +260,7 @@
   "console.awt.8_alt": "Hudolin Alt",
   "console.awt.toyota_rhamnous_alt": "Toyota Alt 3",
   "console.awt.junkglass2": "Junkglass Alt",
+  "console.awt.toyota_hartnell": "Classic Toyota",
 
   "block.awt.atrium_block": "Atrium Block",
   "block.awt.atrium_ore": "Atrium Ore",
