new exterior model

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -74,6 +74,7 @@
   "exterior.awt.lego_dimensions_police_box": "Lego Dim",
   "exterior.awt.lefthottub": "Hot Tub Space/Time Machine",
   "exterior.awt.jake": "AiT Jake",
+  "exterior.awt.gambleblocktis": "GambleBlocktis",
 
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "TardisOwner",
