--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -148,6 +148,7 @@
   "sonic.awt.elegant_sonic": "Sonic Dooku Lightsaber",
   "sonic.awt.laser_screwdriver": "Laser Screwdriver",
   "sonic.awt.dbz_sonic": "Dragon Ball Radar",
+  "sonic.awt.alstaff": "Alastor's Staff",
 
   "desktop.awt.hell": "Hell",
   "desktop.awt.fnaf4": "FNAF 4",
