bowtie - dino can u fix translations as they do NOT wanna work for me

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -30,6 +30,7 @@
   "item.awt.sonic_glasses": "Sonic Shades",
   "item.awt.dbz_scouter": "Sonic Scouter",
   "item.awt.trustable_hat": "Trustable Hat",
+  "item.awt.bowtie": "Bowtie",
   "item.awt.k9_spawn_egg": "K-9 Spawn Egg",
   "item.awt.k9_spawn_egg.desc": "K-9!!",
   "item.awt.spoon": "Spoon",
