--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -82,6 +82,7 @@
   "exterior.awt.lefthottub": "Hot Tub Space/Time Machine",
   "exterior.awt.jake": "AiT Jake",
   "exterior.awt.gambleblocktis": "GambleBlocktis",
+  "exterior.awt.blocktisbnw": "Black & White",
 
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "TardisOwner",
