fixed the mod crashing - monitor needs finishing still but made progress

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -286,7 +286,7 @@
   "block.awt.thick_grate_block": "Thick Grate",
   "block.awt.rusty_grate_block": "Rusty Grate",
   "block.awt.rusty_thick_grate_block": "Rusty Thick Grate",
-  "block.awt.awt_trustable_monitor": "Trustable Monitor",
+  "block.awt.trustable_monitor": "Trustable Monitor",
 
   "item_group.awt.Roundel": "AWT: Roundels",
   "item_group.Atrium": "AWT: Main",
