--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -264,7 +264,7 @@
   "block.awt.hartnell_wall": "Hartnell Wall",
 
   "console.awt.toyota_rhamnous": "Rhamnous' Toyota",
-  "console.awt.crystalalt": "TardisOwners' Crystalline",
+  "console.awt.crystalalt": "Crystalline Alt",
   "console.awt.block": "Vanilla Console",
   "console.awt.test": "Testy Console :3",
   "console.awt.dice": "Toyota Alt",
