new fez - 3d model wont work gay ass intellij

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -35,6 +35,7 @@
   "item.awt.bowtie": "Bowtie",
 
   "item.awt.fez": "Fez",
+  "item.awt.fancyfez": "Fez",
   "item.awt.purplefez": "Fez",
   "item.awt.pinkfez": "Fez",
   "item.awt.greenfez": "Fez",
