Time Capsule Exterior

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -60,6 +60,7 @@
   "exterior.awt.legoboxes": "Lego-Styled",
   "exterior.awt.capsules": "TT Capsules",
   "exterior.awt.awt-exclusive": "AWT Exclusive",
+  "exterior.awt.ships": "Space/Time Ships",
 
   "exterior.awt.third": "Pertwee",
   "exterior.awt.second": "Troughton",
@@ -91,6 +92,7 @@
   "exterior.awt.jake": "AiT Jake",
   "exterior.awt.gambleblocktis": "GambleBlocktis",
   "exterior.awt.blocktisbnw": "Black & White",
+  "exterior.awt.timepod": "Time Capsule",
 
   "exterior.awt.policebox_alt": "Toyota",
   "exterior.awt.policebox_purple": "TardisOwner",
