--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -43,6 +43,7 @@
   "item.awt.greyfez": "Fez",
   "item.awt.darkbluefez": "Fez",
   "item.awt.bluefez": "Fez",
+  "item.awt.yellowfez": "Fez",
 
   "item.awt.k9_spawn_egg": "K-9 Spawn Egg",
   "item.awt.k9_spawn_egg.desc": "K-9!!",
