dalek eye stalk - no recipe yet

--- a/src/main/resources/assets/awt/lang/en_us.json
+++ b/src/main/resources/assets/awt/lang/en_us.json
@@ -34,6 +34,8 @@
 
   "item.awt.bowtie": "Bowtie",
 
+  "item.awt.eyestalk": "Dalek Eyestalk",
+
   "item.awt.fez": "Fez",
   "item.awt.fancyfez": "Fez",
   "item.awt.purplefez": "Fez",
